# family-photo-cloud

./: .gitignore  LICENSE  README.md
apps/photo-frame-web/: README.md  pyproject.toml
apps/photo-frame-web/app/photo_frame_web/: __init__.py  main.py
demo/: index.html
docs/: operations.md  setup-raspberry-pi-kiosk-web.md  setup-raspberry-pi.md  setup-ubuntu-server.md  setup-web-photo-frame.md  setup-wsl.md
examples/: env.example  photo-frame-web.env.example  rclone-nextcloud.example.txt
scripts/pi/: install-photoframe.sh  start-photoframe.sh  start-web-photoframe.sh  sync-photoframe.sh
scripts/ubuntu/: check-prereqs.sh  install-docker-tailscale.sh  nextcloud-aio-run.example.sh  start-photo-frame-web.sh  tailscale-serve.sh
scripts/wsl/: check-prereqs.sh  nextcloud-aio-run.example.sh  tailscale-serve.example.ps1
skills/family-photo-cloud-setup/: SKILL.md
skills/family-photo-cloud-setup/agents/: openai.yaml
skills/family-photo-cloud-setup/references/: operations.md  raspberry-pi.md  ubuntu-server.md  wsl-nextcloud.md
